--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -1,114 +1,158 @@
-.slick-prev {
-    left      : -10 !important;
-    z-index   : 999 !important;
-    height    : 48px !important;
-    width     : 44px !important;
-    background: #fff !important;
-    border    : 2px solid #d7d7d7 !important;
+.home-container {
+    position: relative;
+    bottom  : 84px;
 
-    &:hover {
-        background: #d7d7d7 !important;
-    }
-}
+    .slick-prev {
+        left      : -10 !important;
+        z-index   : 999 !important;
+        height    : 48px !important;
+        width     : 44px !important;
+        background: #fff !important;
+        border    : 2px solid #d7d7d7 !important;
 
-.slick-prev,
-.slick-next :before {
-    font-family: FontAwesome !important;
-    color      : red !important;
-}
-
-.slick-next {
-    right     : -10 !important;
-    height    : 48px !important;
-    width     : 44px !important;
-    background: #fff !important;
-    border    : 2px solid #d7d7d7 !important;
-
-    &:hover {
-        background: #d7d7d7 !important;
-    }
-}
-
-.section-share {
-    &.section-slider {
-        background: #f5f5f5;
-
+        &:hover {
+            background: #d7d7d7 !important;
+        }
     }
 
-    border: 1px solid red;
+    .slick-prev,
+    .slick-next :before {
+        font-family: FontAwesome !important;
+        color      : red !important;
+    }
 
-    .section-content {
-        text-align: -webkit-center;
+    .slick-next {
+        right     : -10 !important;
+        height    : 48px !important;
+        width     : 44px !important;
+        background: #fff !important;
+        border    : 2px solid #d7d7d7 !important;
 
-        .section-customize {
-            .bg-image {
-                width : 150px;
-                height: 150px;
+        &:hover {
+            background: #d7d7d7 !important;
+        }
+    }
 
-                background-color   : white;
-                background-position: center center;
-                background-size    : cover;
-                background-repeat  : no-repeat;
+    .section-share {
+        border-bottom : 1px solid #f2f2f2;
+        margin        : 0 20px;
+        padding-bottom: 35px;
 
-                &.section-slider {
-                    background-image: url('../../assets/Slider/portfolio-1.jpg');
+        &.section-slider {
+            background: white;
+
+        }
+
+        .section-content {
+            text-align: -webkit-center;
+
+            .slick-slider {
+                .slick-prev:before {
+                    color  : black !important;
+                    content: '←';
                 }
 
-                &.section-carousel {
-                    background-image: url('../../assets/Slider/portfolio-2.jpg');
+                .slick-next:before {
+                    content: '→';
+                    color  : black !important;
+                }
+            }
+
+            .section-customize {
+                .album-name {
+                    cursor     : pointer;
+                    color      : #333;
+                    font-weight: 100;
+                }
+
+                .bg-image {
+                    width              : 150px;
+                    height             : 150px;
+                    cursor             : pointer;
+                    background-color   : white;
+                    background-position: center center;
+                    background-size    : cover;
+                    background-repeat  : no-repeat;
+
+                    &.section-slider {
+                        background-image: url('../../assets/Slider/portfolio-1.jpg');
+                    }
+
+                    &.section-carousel {
+                        background-image: url('../../assets/Slider/portfolio-2.jpg');
+                    }
                 }
             }
         }
     }
-}
 
 
-.section-share {
-    background: #f5f5f5;
+    .section-share {
+        background: white;
 
 
-    .section-container {
-        margin        : 0 50px;
-        display       : flex;
-        flex-direction: column;
+        .section-container {
+            margin        : 0 50px;
+            display       : flex;
+            flex-direction: column;
 
-        .section-header {
-            height       : 60px;
-            padding-top  : 30px;
-            margin-bottom: 30px;
+            .section-header {
+                height       : 60px;
+                padding-top  : 20px;
+                margin-bottom: 30px;
 
-            .title-section {
-                font-weight: 400;
-                font-size  : 22px;
-            }
+                .title-section {
+                    font-weight: 400;
+                    font-size  : 22px;
+                }
 
-            .btn-section {
-                display       : block;
-                float         : right;
-                padding       : 10px 15px;
-                border        : none;
-                outline       : none;
-                background    : #ebebeb;
-                color         : black;
-                cursor        : pointer;
-                text-transform: uppercase;
+                .btn-section {
+                    display       : block;
+                    float         : right;
+                    padding       : 10px 15px;
+                    border        : none;
+                    outline       : none;
+                    background    : #ebebeb;
+                    color         : black;
+                    cursor        : pointer;
+                    text-transform: uppercase;
 
-                &:hover {
-                    color     : white;
-                    background: #f7d800;
+                    &:hover {
+                        color     : white;
+                        background: #f7d800;
+                    }
                 }
             }
+
+
+        }
+    }
+
+    .home-footer {
+        text-align : center;
+        padding-top: 8px;
+
+        a {
+            text-decoration: none;
+        }
+    }
+
+    .main-content {
+        position: relative;
+        margin  : 0 4rem;
+
+        .content-left {
+            margin      : 20px 20px;
+            border-right: 1px solid #f2f2f2;
+            width       : 70%;
         }
 
-
-    }
-}
-
-.home-footer {
-    text-align : center;
-    padding-top: 8px;
-
-    a {
-        text-decoration: none;
+        .content-right {
+            height  : 100%;
+            top     : 0;
+            right   : 0;
+            width   : 30%;
+            position: absolute;
+        }
     }
 }
