--- a/src/containers/Partial/MusicPlayer.scss
+++ b/src/containers/Partial/MusicPlayer.scss
@@ -13,7 +13,6 @@
     border-top      : 1px solid #cecece;
 
     .player-left {
-        border     : 1px solid red;
         margin-top : auto;
         align-items: center;
         width      : 30%;
@@ -40,6 +39,7 @@
         i {
             font-size   : 16px;
             padding-left: 8px;
+            margin-left : 2rem;
         }
 
         img {
@@ -55,7 +55,6 @@
         flex-direction : column;
         justify-content: center;
         width          : 40%;
-        border         : 1px solid red;
         gap            : 4px;
 
         .player-action {
@@ -76,6 +75,15 @@
             .play-btn {
                 font-size: 32px;
 
+            }
+
+            .repeat1 {
+                &::before {
+                    content  : "1";
+                    font-size: 8px;
+                    position : relative;
+                    right    : -17px;
+                }
             }
         }
 
@@ -117,7 +125,29 @@
     }
 
     .player-right {
-        width : 30%;
-        border: 1px solid red;
+        width          : 30%;
+        display        : flex;
+        align-items    : center;
+        justify-content: flex-end;
+        gap            : 1.5rem;
+        font-size      : 1.3rem;
+
+        .volume {
+            i {
+                cursor: pointer;
+            }
+
+            input {
+                margin-left: 0.5rem;
+                height     : 0.8rem;
+                cursor     : pointer;
+            }
+        }
+
+        .album {
+            margin-right: 1.5rem;
+            position    : relative;
+            cursor      : pointer;
+        }
     }
 }
