--- a/src/containers/Section/AlbumMusic.scss
+++ b/src/containers/Section/AlbumMusic.scss
@@ -5,7 +5,6 @@
     width   : 80%;
     margin  : auto;
     padding : 50px 0px 50px 0px;
-    border  : 1px solid springgreen;
     height  : 1000px;
 
     .album-banner {
@@ -14,7 +13,6 @@
         display: flex;
 
         .album-banner-left {
-            border  : 1px solid black;
             width   : 55%;
             position: relative;
 
@@ -74,7 +72,6 @@
                 bottom          : 0;
                 width           : 8rem;
                 height          : 8rem;
-                border          : 1px solid green;
                 flex-direction  : column;
                 background-color: black;
                 color           : white;
@@ -100,16 +97,18 @@
             width: 10%;
 
             .create-at {
-                text-align: right;
-                margin    : 2rem;
-                width     : 10rem;
-                height    : 2rem;
-                border    : 1px solid black;
+                text-align : right;
+                margin     : 2rem;
+                width      : 10rem;
+                height     : 2rem;
+                color      : #fff;
+                font-family: Inter, sans-serif;
+                font-weight: 100;
+                font-size  : 16px;
             }
         }
 
         .album-banner-right {
-            border         : 1px solid yellow;
             width          : 35%;
             display        : flex;
             justify-content: flex-end;
@@ -135,7 +134,6 @@
         width         : 25%;
         flex-grow     : 0;
         flex-shrink   : 0;
-        border        : 1px solid rebeccapurple;
 
         .thumbnail {
             width        : 100%;
@@ -174,177 +172,259 @@
         }
     }
 
-    .album-content-right {
-        flex-grow: 1;
-        flex     : 1 1 auto;
-        border   : 1px solid yellowgreen;
-
-        .album-list-song {
-            width         : 100%;
-            display       : flex;
-            flex-direction: column;
-            font-size     : 0.75rem;
-            font-weight   : 600;
-
-            .album-list-title {
-                font-size      : 0.75rem;
-                display        : flex;
-                justify-content: space-between;
-                align-items    : center;
-                padding        : 10px;
-            }
-
-            .list-song-container {
-                .list-song {
-                    display        : flex;
-                    justify-content: space-between;
-                    align-items    : center;
-                    padding        : 10px;
-                }
-
-                .col-1 {
-                    display    : flex;
-                    align-items: center;
-                    gap        : 3;
-                    flex       : 1 1 auto;
-
-                    .img-music {
-                        width        : 10rem;
-                        height       : 10rem;
-                        object-fit   : cover;
-                        border-radius: 4px;
-
-                    }
-
-                    .artist-music {
-                        display       : flex;
-                        flex-direction: column;
-                        width         : 100%;
-                    }
-
-                    .artist-name {
-                        font-size  : 0.75rem;
-                        font-weight: 600;
-                    }
-                }
-
-                .col-2 {
-                    display        : flex;
-                    flex           : 1 1 auto;
-                    align-items    : center;
-                    justify-content: center;
-                }
-
-                .col-3 {
-                    display        : flex;
-                    flex           : 1 1 auto;
-                    justify-content: flex-end;
-                }
-            }
-        }
-
-    }
-
     .album-content {
-        .album-action {
-            width  : 70%;
-            border : 1px solid orange;
-            height : 4rem;
-            margin : 0 auto;
-            display: inline-block;
+        position: relative;
 
-            .like {
-                margin          : 1rem;
-                position        : relative;
-                height          : 26px;
-                padding         : 2px 11px 2px 10px;
-                border          : 1px solid #e5e5e5;
-                border-radius   : 3px;
-                background-color: #fff;
-                cursor          : pointer;
-                color           : #333;
-                font-size       : 14px;
-                line-height     : 20px;
-                white-space     : nowrap;
-                font-family     : Inter, sans-serif;
-                font-weight     : 100;
-                text-align      : center;
-                display         : block;
-                float           : left;
+        .left {
+            .album-action {
+                width        : 68%;
+                height       : 4rem;
+                margin       : 0 auto;
+                display      : inline-block;
+                border-bottom: 1px solid #f2f2f2;
 
-                span {
-                    padding-right: 0.4rem;
-                }
-            }
+                .like {
+                    margin          : 1rem;
+                    position        : relative;
+                    height          : 26px;
+                    padding         : 2px 11px 2px 10px;
+                    border          : 1px solid #e5e5e5;
+                    border-radius   : 3px;
+                    background-color: #fff;
+                    cursor          : pointer;
+                    color           : #333;
+                    font-size       : 14px;
+                    line-height     : 20px;
+                    white-space     : nowrap;
+                    font-family     : Inter, sans-serif;
+                    font-weight     : 100;
+                    text-align      : center;
+                    display         : block;
+                    float           : left;
 
-            .liked {
-                margin          : 1rem;
-                height          : 26px;
-                padding         : 2px 11px 2px 10px;
-                border-radius   : 3px;
-                background-color: #fff;
-                cursor          : pointer;
-                color           : #333;
-                font-size       : 14px;
-                line-height     : 20px;
-                white-space     : nowrap;
-                font-family     : Inter, sans-serif;
-                font-weight     : 100;
-                text-align      : center;
-                opacity         : 0.5;
-                display         : block;
-                float           : right;
-
-                span {
-                    padding-right: 0.4rem;
-                }
-            }
-        }
-
-        .album-info {
-            display: flex;
-            height : 100%;
-            width  : 70%;
-            border : 1px solid rgb(66, 199, 66);
-
-            .album-content-left {
-                height: 100%;
-
-                .album-info-avatar {
-                    margin-top   : 1rem;
-                    border-radius: 4rem;
-                    height       : 8rem;
-                    width        : 8rem;
-                    border       : 1px solid rosybrown;
-                    box-shadow   : inset 0 0 0 1px rgba(0, 0, 0, .1);
-
-                }
-
-                .album-info-name {}
-
-                .album-info-quantity {
-                    color: #999;
-                }
-
-                .album-info-btn-follow {
-                    .btn-follow {
-                        background-color: #f50;
-                        border-color    : #f50;
-                        color           : #fff;
-                        cursor          : pointer;
-                        border          : 1px solid #e5e5e5;
-                        border-radius   : 3px;
-                        font-weight     : 100;
-                        white-space     : nowrap;
-                        font-size       : 11px;
-                        padding         : 2px 9px 2px 8px;
-                        height          : 22px;
-                        line-height     : 16px;
+                    span {
+                        padding-right: 0.4rem;
                     }
 
+                    &:hover {
+                        border: 1px solid black;
+                    }
+                }
+
+                .liked {
+                    margin          : 1rem;
+                    height          : 26px;
+                    padding         : 2px 11px 2px 10px;
+                    border-radius   : 3px;
+                    background-color: #fff;
+                    cursor          : pointer;
+                    color           : #333;
+                    font-size       : 14px;
+                    line-height     : 20px;
+                    white-space     : nowrap;
+                    font-family     : Inter, sans-serif;
+                    font-weight     : 100;
+                    text-align      : center;
+                    opacity         : 0.5;
+                    display         : block;
+                    float           : right;
+
+                    span {
+                        padding-right: 0.4rem;
+                    }
+                }
+            }
+
+            .album-info {
+                display: flex;
+                height : 100%;
+                width  : 68%;
+
+                .album-content-left {
+                    height: 100%;
+
+                    .album-info-avatar {
+                        margin-top   : 1rem;
+                        border-radius: 4rem;
+                        height       : 8rem;
+                        width        : 8rem;
+                        box-shadow   : inset 0 0 0 1px rgba(0, 0, 0, .1);
+
+                    }
+
+                    .album-info-name {}
+
+                    .album-info-quantity {
+                        color: #999;
+                    }
+
+                    .album-info-btn-follow {
+                        .btn-follow {
+                            background-color: #f50;
+                            border-color    : #f50;
+                            color           : #fff;
+                            cursor          : pointer;
+                            border-radius   : 3px;
+                            font-weight     : 100;
+                            white-space     : nowrap;
+                            font-size       : 11px;
+                            padding         : 2px 9px 2px 8px;
+                            height          : 22px;
+                            line-height     : 16px;
+                        }
+
+                    }
+                }
+
+                .album-content-center {
+                    width: 100%;
+
+
+                    .list-song {
+                        height        : 3.5rem;
+                        width         : 100%;
+                        display       : flex;
+                        flex-direction: row;
+                        align-items   : center;
+                        padding-left  : 1rem;
+                        border-bottom : 1px solid #f2f2f2;
+
+                        .track-avatar {
+                            width : 2.5rem;
+                            height: 2.5rem;
+                        }
+
+                        .track-number {
+                            padding    : 1rem;
+                            font-weight: 100;
+                            color      : #999;
+                        }
+
+
+                        .artist-info {
+                            height     : 49px;
+                            line-height: 49px;
+                            width      : 37rem;
+
+                            .track-artist {
+                                color: #999;
+                            }
+
+                            .track-name {
+                                font-weight: 100;
+                                font-family: Inter, sans-serif;
+                            }
+                        }
+
+                        .track-play {
+                            color: #999;
+                        }
+
+                        &:hover {
+                            background-color: #f2f2f2;
+                        }
+
+                    }
                 }
             }
         }
+
+        .album-content-right {
+            position   : absolute;
+            top        : 0px;
+            left       : 70%;
+            width      : 30%;
+            border-left: 1px solid #f2f2f2;
+            height     : 100%;
+
+            .relative-album {
+                .title-relative {
+                    display      : block;
+                    font-weight  : 100;
+                    color        : #999;
+                    border-bottom: 0.5px solid #f2f2f2;
+
+                    .icon {
+                        margin: 1rem;
+                        float : left;
+                        height: 2rem;
+                        width : 2rem;
+                    }
+
+                    .view-all {
+                        float : right;
+                        margin: 0 1rem;
+                        cursor: pointer;
+
+                        &:hover {
+                            color: black;
+                        }
+                    }
+
+                    line-height: 4rem;
+                    height     : 4rem;
+                    width      : 100%;
+                }
+
+                .content-relative {
+                    width         : 100%;
+                    height        : 100%;
+                    // display       : flex;
+                    // flex-direction: row;
+                    // align-items   : center;
+
+                    .user-album {
+
+                        margin-top : 1rem;
+                        display    : flex;
+                        margin-left: 0rem;
+                        align-items: center;
+                        width      : 100%;
+                        height     : 5rem;
+
+                        .round-user-album-th {
+                            height     : 5rem;
+                            position   : relative;
+                            margin-left: 1rem;
+                            width      : 20%;
+
+                            .user-album-thumbnail {
+                                position: absolute;
+                                right   : 7px;
+                                top     : 7px;
+                                width   : 4rem;
+                                height  : 4rem;
+                            }
+                        }
+
+                        .user-album-info {
+                            width      : 80%;
+                            height     : 5rem;
+                            margin-left: 1rem;
+
+                            .artist {
+                                color: #999;
+                            }
+
+                            .user-album-name {
+                                white-space  : nowrap;
+                                text-overflow: ellipsis;
+                                word-break   : normal;
+                                font-weight  : 100;
+                                color        : #333;
+                            }
+
+                            .user-album-liked {
+                                color: #999;
+                            }
+                        }
+
+                    }
+                }
+            }
+
+        }
+
     }
 
 
